# GP

./: .gitignore  README.md  TODO.md  bts.jsonc  package.json  tsconfig.json  turbo.json
apps/server/: .env.example  package.json  tsconfig.json  tsdown.config.ts
apps/server/src/: api.ts  index.ts  types.ts
apps/server/src/ingest/: ml-client.ts  orchestrator.ts  stream.ts
apps/server/src/scripts/: ingest-classification.ts
apps/server/src/traffic/: signal-engine.ts
apps/server/tests/: ml-client.test.ts  signal-engine.test.ts
apps/web/: components.json  index.html  package.json  tsconfig.json
apps/web/src/: index.css
apps/web/src/components/: header.tsx  mode-toggle.tsx
apps/web/src/components/verdict/: panels.tsx  primitives.tsx
apps/web/src/lib/: api.ts  config.ts  stream.ts  types.ts  verdict.ts
apps/web/src/routes/: __root.tsx  classify.tsx  index.tsx  live.tsx
services/ml/: .env.example  .gitignore  COLAB.md  DATASETS.md  README.md  pyproject.toml
services/ml/app/: config.py  logging_setup.py  preprocess.py  registry.py  schemas.py  scoring.py  server.py  streaming.py
services/ml/app/inference/: accident.py  ambulance.py  base.py  siren.py  traffic.py
services/ml/notebooks/: train_congestion_colab.ipynb  train_congestion_v2_colab.ipynb
services/ml/scripts/: classify_dataset.py  export_onnx.py  prepare_hf_dataset.py
services/ml/tests/: test_scoring.py
services/ml/training/: common.py  train_congestion.py
